# EDM4eic

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CMakeLists.txt  EDM4eicVersion.h.in  LICENSE.spdx  README.md  dd4hep.yaml  edm4eic.yaml  edm4eic.yaml~  eic_data.yaml  eic_data2.yaml  savedstate.sav
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: linux-eic-shell.yml  linux-lcg.yml  version-check.yml
cmake/: EDM4EICConfig.cmake.in  EICDConfig.cmake.in  root.cmake
docs/: Doxyfile  Doxyfile.in
python/: CMakeLists.txt
python/edm4eic/: __init__.py  __version__.py.in
source/: CMakeLists.txt
source/include/eicd/: helpers.h
source/src/: helpers.cxx
test/: CMakeLists.txt  read_events.cc  read_events.h  test_caloroc_hits.cc  test_caloroc_hits.h  test_rdf.cc  test_rdf.py  write_events.cc  write_events.h
test/utils/: CMakeLists.txt  test_kinematics.cpp  test_kinematics.py
utils/: CMakeLists.txt
utils/include/edm4eic/: analysis_utils.h  association_utils.h  helix_utils.h  unit_system.h  vector_utils.h  vector_utils_legacy.h
utils/include/edm4eic/utils/: dataframe.h  kinematics.h  vector_utils.h
utils/include/eicd/: analysis_utils.h  vector_utils.h  vector_utils_legacy.h
utils/src/: helix_utils.cpp  merge.cpp  utils.cxx
